src/styles/HomePage.scss
.home-page {
  color: #fff;
  margin-left: 15%;
  margin-right: 0%;

  .home-title {
    font-size: 4rem;
    max-width: 600px;
  }

  .self-picture {
    width: 600px;
    height: 750px;
    margin-left: 0;
    position: relative;
    right: 150px;
    bottom: 0;
  }

  .text-content {
    font-size: 1.5rem;
    max-width: 600px;
  }
}

@media screen and (max-width: 1280px) {
  .home-page {
    margin-left: 5%;
    padding-left: 0;
    .home-title {
      font-size: 2.5rem;
    }
    .text-content {
      font-size: 1rem;
      width: 80%;
    }
    .self-picture {
      width: 300px;
      height: 450px;
      right: 0;
      left: 15px;
    }
  }
}

